fixed some minor layout issues on about page and footer

--- a/css/main.css
+++ b/css/main.css
@@ -424,6 +424,9 @@ header .dropdown-menu:before {
   color: #6f6f6f;
   font-size: 14px; }
 
+#bottom p {
+  font-size: 14px; }
+
 #bottom h4 {
   margin-bottom: 15px;
   margin-top: 0; }
